src/assets/css/style.css
/* ... */
.about-content .skills .skill-item .skill-percent {
  position: absolute;
  right: 0;
  top: -2.5rem;
}

.fact-item {
  flex: 0 0 25%;
  max-width: 25%;
  margin-top: var(--m-2-5);
  text-align: center;
}

.fact-item i {
  font-size: var(--h2-font-size);
  color: var(--color-secondary);
}

/* Services */
.services .service-item {
  flex: 0 0 33.33%;
  max-width: 33.33%;
  display: flex;
}

.services .service-item .service-item-inner {
  border-radius: var(--border-radius);
  padding: var(--card-padding);
  text-align: center;
  transform: translateY(0);
  transition: 0.3s;
  width: 100%;
}

.services .service-item .service-item-inner:hover {
  transform: translateY(-0.625rem);
}

.services .service-item img {
  margin-bottom: var(--m-0-75);
}

.service-item h3 {
  margin-bottom: var(--m-0-5);
  color: #fff;
  font-weight: 700;
}

.service-item p {
  color: #fff;
}

.text {
  text-align: center;
  margin-top: var(--m-1-5);
}

.text a {
  color: var(--color-dark);
}

/* Experience */
.education {
  flex: 0 0 50%;
  max-width: 50%;
}

.experience {
  flex: 0 0 50%;
  max-width: 50%;
}

.timeline-box {
  flex: 0 0 100%;
  max-width: 100%;
}

.timeline {
  background-color: var(--color-white);
  padding: var(--card-padding);
  border-radius: var(--border-radius);
  width: 100%;
  position: relative;
}

.timeline .timeline-item {
  position: relative;
  padding-left: 2.5rem;
  padding-bottom: 1.9rem;
}

.timeline .timeline-item:last-child {
  padding-bottom: 0;
}

.timeline .timeline-item::before {
  content: '';
  width: 2px;
  position: absolute;
  height: calc(100% - 1.5rem);
  left: calc(var(--m-0-5) - 0.5px);
  background-color: var(--color-primary);
  top: 1.5rem;
  opacity: 0.8;
}

.timeline .timeline-icon {
  position: absolute;
  left: -0.25rem;
  top: 0;
  font-size: 1.5rem;
  background-color: var(--color-white);
  color: var(--color-primary);
}

.timeline .timeline-date {
  font-size: var(--small-font-size);
  color: var(--color-secondary);
}

.timeline .timeline-date .lni {
  margin-right: 0.3rem;
}

.timeline .timeline-title {
  margin: var(--m-0-75) 0;
  font-weight: 700;
}

/* Pricing */
.prices {
  flex: 0 0 33.33%;
  max-width: 33.33%;
}

.prices:nth-child(even) {
  margin-top: 1.5rem;
}

.price-item {
  padding: var(--card-padding);
  background-color: var(--color-white);
  text-align: center;
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow);
  color: var(--color-dark);
  transition: transform 0.3s ease;
}

.price-item:hover {
  transform: scale(1.05);
}

.price-item h3.plan {
  margin: var(--m-0-75) 0;
  color: var(--color-dark);
  font-weight: 700;
}

.prices p {
  margin-bottom: 1rem;
  color: var(--color-secondary);
}

.price-item .price {
  font-size: var(--h1-font-size);
  font-weight: 650;
  color: var(--color-dark);
  margin: var(--m-1) 0;
}

.price-item .price em {
  font-style: normal;
  font-size: var(--small-font-size);
  margin-right: var(--m-0-5);
  vertical-align: super;
}

.price-item .price span {
  font-size: var(--normal-font-size);
  margin-left: var(--m-0-75);
}

.price-item .btn {
  margin-top: var(--m-1);
}

.price-item.best {
  padding: 3.25rem 2.5rem;
  z-index: 1;
  position: relative;
}

.price-item .badge {
  position: absolute;
  left: 0;
  top: 2.6rem;
  color: #fff;
  background-color: var(--color-primary);
  transform: rotate(-90deg);
  padding: 0.4rem 0.75rem;
  font-size: var(--small-font-size);
  border-top-left-radius: var(--border-radius);
  border-bottom-left-radius: var(--border-radius);
  border-bottom-right-radius: 0;
  font-weight: 550;
}

/* Portfolio */
.portfolio .portfolio-filter {
  flex: 0 0 100%;
  max-width: 100%;
  text-align: center;
  margin-bottom: var(--m-2-5);
}

.portfolio .portfolio-filter button {
  border: none;
  background-color: transparent;
  font-weight: 500;
  text-transform: capitalize;
  margin: 0 var(--m-0-75);
  cursor: pointer;
  white-space: nowrap;
  color: var(--color-dark);
  transition: 0.3s;
  padding: 0.5rem 1rem;
}

.portfolio .portfolio-filter button:hover {
  color: var(--color-primary);
  transition: color 0.3s ease;
}

.portfolio .portfolio-filter button.active {
  color: var(--color-primary);
  position: relative;
}

.portfolio .portfolio-filter button.active::before {
  content: '';
  position: absolute;
  bottom: -0.75rem;
  left: 45%;
  width: 0.3rem;
  height: 0.3rem;
  background-color: var(--color-primary);
  border-radius: 50%;
}

.portfolio-item {
  flex: 0 0 33.33%;
  max-width: 33.33%;
  margin-bottom: var(--m-1-5);
}

.portfolio-item.show {
  display: block;
  animation: showItem 0.5s ease;
}

@keyframes showItem {
  0% {
    transform: scale(0.6);
    opacity: 0;
  }
  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.portfolio-item-inner {
  position: relative;
  overflow: hidden;
  border-radius: var(--border-radius);
  cursor: pointer;
  aspect-ratio: 4 / 3;
}

.portfolio-item-thumbnail {
  border-radius: var(--border-radius);
  overflow: hidden;
}

.portfolio-item-thumbnail img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.portfolio-item .mask {
  background: rgba(0, 0, 0, .7);
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: 0.3s;
  border-radius: var(--border-radius);
  mix-blend-mode: multiply;
  z-index: 1;
}

.portfolio-item-inner:hover .mask {
  opacity: 0.9;
}

.portfolio-item .term {
  color: #fff;
  background: var(--color-primary);
  border-bottom-left-radius: 0.98rem;
  border-bottom-right-radius: 0.98rem;
  position: absolute;
  top: 0;
  left: var(--m-1-5);
  font-size: var(--small-font-size);
  display: inline-block;
  padding: 0.19rem 0.625rem;
  transform: translateY(-40px);
  transition: 0.3s;
  z-index: 2;
}

.portfolio-item h3 {
  color: #fff;
  font-size: 1.25rem;
  margin: 0 0 0.98rem;
  padding: 0 1.25rem;
  position: absolute;
  top: 3.75rem;
  transition: 0.3s;
  transform: translateY(30px);
  opacity: 0;
  z-index: 2;
  font-weight: 700;
}
/* ... */

